fix overflow code boundaries problems

--- a/src/frontend/src/style/classes.css
+++ b/src/frontend/src/style/classes.css
@@ -227,3 +227,14 @@ textarea[class^="ag-"]:focus {
     0 0;
   transition-duration: 1.5s;
 }
+
+span.token {
+  display: inline-block;
+  max-width: 100%;
+}
+
+code {
+  max-width: 100%;
+  display: inline-block;
+  width: 100%;
+}
